--- a/Pos_System/Pos_System.csproj
+++ b/Pos_System/Pos_System.csproj
@@ -125,6 +125,9 @@
     <Compile Include="PosRepository.cs" />
     <Compile Include="ProductsDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="ViewModel\SubViewModel1.cs" />
+    <Compile Include="ViewModel\SubViewModel2.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -142,6 +145,8 @@
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\Shared\_LeftView.cshtml" />
+    <Content Include="Views\Shared\_RightView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
