--- a/Pos_System/Web.config
+++ b/Pos_System/Web.config
@@ -20,6 +20,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="owin:AppStartup" value="Pos_System.App_Start.Startup"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
