Left View Update

--- a/Pos_System/Pos_System.csproj
+++ b/Pos_System/Pos_System.csproj
@@ -171,6 +171,7 @@
     <Content Include="Views\Shared\_RightViewProducts.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
+    <Content Include="Views\Shared\_LeftViewData.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
