--- a/Pos_System/Pos_System.csproj
+++ b/Pos_System/Pos_System.csproj
@@ -117,7 +117,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\clothing.jpg" />
     <Content Include="Content\Images\computer.jpg" />
+    <Content Include="Content\Images\computer_repair.jpeg" />
+    <Content Include="Content\Images\gift_folding.jpeg" />
+    <Content Include="Content\Images\grapes.jpeg" />
+    <Content Include="Content\Images\headphone.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -175,6 +180,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Auth\Login.cshtml" />
     <Content Include="Views\Shared\_LeftViewData.cshtml" />
+    <Content Include="Views\Shared\_SummaryView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
